image trail update

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="styles/index.css" rel="stylesheet"  type="text/css"/>
         <!-- <link href="media/favicon.ico" rel="icon"> -->
         <!-- <link href="media/icon.svg" rel="icon" type="image/svg+xml"> -->
+        <script src="./scripts/imageTrail.js" defer></script>
     </head>
     <body>
         <input type="checkbox" name="" id="check">
@@ -455,6 +456,18 @@
                         </a>
                     </div>
                     <h2>PROVIDENCE PLACE</h2>
+                </div>
+                <div>
+                    <img class="image" data-index="0" data-status="inactive" src="./media/shops/shop1.webp" />
+                    <img class="image" data-index="1" data-status="inactive" src="./media/event1.webp"/>
+                    <img class="image" data-index="2" data-status="inactive" src="./media/event2.webp"/>
+                    <img class="image" data-index="3" data-status="inactive" src="./media/event3.webp"/>
+                    <img class="image" data-index="4" data-status="inactive" src="./media/shops/shop11.webp"/>
+                    <img class="image" data-index="5" data-status="inactive" src="./media/Vanderwarker_Cover.jpg"/>
+                    <img class="image" data-index="6" data-status="inactive" src="./media/horse.jpg"/>
+                    <img class="image" data-index="7" data-status="inactive" src="./media/ProvPlaceStateHouse.jpg"/>
+                    <img class="image" data-index="8" data-status="inactive" src="./media/event2.webp"/>
+                    <img class="image" data-index="9" data-status="inactive" src="./media/providencePlace.webp"/>
                 </div>
             </section>     
         </main>
